okay this is final push

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,10 @@ body {
     border-color: darkgoldenrod;
 }
 
+.row {
+    background: white;
+}
+
 #border {
     border-style: solid;
     border-color: rgb(9, 145, 190);
